test/errors/branch-plus.rom
Error in `branch-plus.asm` on line 8: Branch address out of range
